--- a/tools/tom_interop/TmdlTools.csproj
+++ b/tools/tom_interop/TmdlTools.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AnalysisServices" Version="19.103.2" />
+    <PackageReference Include="Microsoft.AnalysisServices.AdomdClient.NetCore.retail.amd64" Version="19.103.2" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     <PackageReference Include="Azure.Identity" Version="1.12.0" />
   </ItemGroup>
